Fix spacing and image size for article cards to be appropriate for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,14 @@ body {
 /* ARTICAL CARDS */
 .article-card {
   display: flex;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .article-card img {
   border-radius: 10px;
-  margin-right: 3rem;
+  max-width: 100px;
+  max-height: 100px;
+  margin-right: 1rem;
 }
 
 .article-txt {
